k8s/phase13/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: flotte
spec:
  selector:
    app: front
  ports:
    - name: http
      port: 80
      targetPort: 8080
