k8s/phase13/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
  namespace: flotte
spec:
  ingressClassName: traefik
  rules:
    - host: bataille-navire.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
